--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
