--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "matter-wrap": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-parallax-tilt": "^1.7.301",
     "react-router-dom": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.10",
