--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.12.0",
@@ -19,6 +20,7 @@
     "react-parallax-tilt": "^1.7.301",
     "react-router-dom": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
