--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
+    "lucide-react": "^0.525.0",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.12.0",
     "matter-wrap": "^0.2.0",
@@ -22,6 +23,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
